--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: jj01.nfeng6.pp.ua, port: 39052, type: vmess, uuid: 025f4054-7985-38c3-8f62-6e50f098ad3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-221.7KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.42MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-9.06MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.09MB/s(Youtube:不良林), server: 120.233.186.204, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-16.45MB/s(Youtube:不良林), server: 120.233.186.59, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.34MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.55MB/s(Youtube:不良林), server: jj01.nfeng6.pp.ua, port: 39052, type: vmess, uuid: 025f4054-7985-38c3-8f62-6e50f098ad3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.81MB/s(Youtube:不良林), server: au2-2.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-2.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-437.4KB/s(Youtube:不良林), server: 611hk01.fans8.xyz, port: 443, type: trojan, password: 0e90d359-1733-4994-a195-4df768a18e99, sni: 611hk01.fans8.xyz, skip-cert-verify: true}
   - {name: 🇫🇷 法国-1.23MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
   - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇭🇰 香港-1.02MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-221.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.42MB/s(Youtube:不良林)
       - 🇨🇳 中国-9.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-16.45MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.4KB/s(Youtube:不良林)
       - 🇫🇷 法国-1.23MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.02MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
